<resources>
    <string name="app_name">Guess The Car</string>
    <string name="current_score">Score:</string>
    <string name="current_attempts">Attempts:</string>
    <string name="start_game">Start game</string>
    <string name="auto">Auto</string>
    <string name="profile">Profile</string>
    <string name="your_record">Your record:</string>
    <string name="congrats">Congratulations!</string>
    <string name="new_high_score">You have a new high score:</string>
    <string name="no_auto_left">No more auto left! Your score:</string>
    <string name="excellent_result">Excellent result!</string>
    <string name="your_score">Your score:</string>
    <string name="current_nickname">Nickname:</string>
    <string name="top_gamers">Top 150 gamers:</string>
    <string name="adMobTestInterstitialId" translatable="false">ca-app-pub-3940256099942544/1033173712</string>
    <string name="adMobInterstitialId" translatable="false">ca-app-pub-5215138241700973/2471154435</string>
    <string name="adMobBannerId" translatable="false">ca-app-pub-5215138241700973/6452236824</string>
    <string name="rate_app">Rate app</string>
    <string name="share">Share</string>
    <string name="share_full_text">New game "Guess auto". Download here -> https://play.google.com/store/apps/details?id=kon4.sam.guessauto</string>
    <string name="no_response_from_server">No response from server =( Please try again</string>
    <string name="user_already_exists">User already exists</string>
    <string name="unknown_error">Unknown error: %1$s</string>
    <string name="username_length_short_error">Nickname must contain more than 3 symbols</string>
    <string name="username_length_long_error">Nickname must contain less than 21 symbols</string>
    <string name="user_changed">Nickname successfully changed</string>
    <string name="user_update_success">Saved changes</string>
    <string name="no_internet_connection">Couldn\'t load photo, probably bad internet connection</string>
    <string name="gameOverText">Game over</string>>
    <string name="choose_image_from_gallery">Album</string>
    <string name="take_photo_by_camera">Camera</string>
    <string name="remove_photo">Delete</string>
    <string name="current_avatar">Avatar:</string>
    <string name="invalidUserNameLength">Username length must contain from 4 to 20 symbols</string>
    <string name="save">Save</string>
    <string name="records">Records</string>
    <string name="user_score_ph" translatable="false">%1$d - </string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="you_will_lost_progress">You will lost your current progress!</string>
    <string name="cancel">Cancel</string>
    <string name="photo_changed_success">Photo changed successfully</string>
</resources>