<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyPrimary"
    android:orientation="vertical"
    tools:context=".ui.MenuFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="@dimen/menu_top_image_height"
        android:layout_marginTop="16dp"
        android:padding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bmw_nfsmw" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/start"
            style="@style/MenuButton"
            android:drawableLeft="@drawable/start_game_icon"
            android:text="@string/start_game"
            android:drawableStart="@drawable/start_game_icon" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/change"
            style="@style/MenuButton"
            android:drawableLeft="@drawable/person"
            android:text="@string/profile"
            android:drawableStart="@drawable/person" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/records"
            style="@style/MenuButton"
            android:drawableLeft="@drawable/rewards"
            android:text="@string/records"
            android:drawableStart="@drawable/rewards" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rate_app"
            style="@style/MenuButton"
            android:drawableLeft="@drawable/rate"
            android:text="@string/rate_app"
            android:drawableStart="@drawable/rate" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/share"
            style="@style/MenuButton"
            android:drawableLeft="@drawable/share"
            android:text="@string/share"
            android:drawableStart="@drawable/share" />
    </LinearLayout>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        app:adSize="BANNER"
        app:adUnitId="@string/adMobBannerId"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>