<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/greyPrimary">

    <TextView
        android:id="@+id/gameOverText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center_horizontal"
        android:paddingHorizontal="8dp"
        android:text="@string/gameOverText"
        android:textAlignment="center"
        android:textColor="@color/bluePrimary"
        android:textSize="@dimen/endgame_dialog_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/gameOverTextFull"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/end_game_dialog_tv_margin_top"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:fontFamily="@font/lato_medium"
        android:gravity="center_horizontal"
        android:lineSpacingExtra="10dp"
        android:paddingHorizontal="8dp"
        tools:text="У вас новый рекорд! \n Вы набрали 100 очков!"
        android:textAlignment="center"
        android:textColor="@color/bluePrimary"
        android:textSize="@dimen/endgame_dialog_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverText" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/gameOverOkButton"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/end_game_dialog_tv_margin_top"
        android:text="@string/save"
        android:textSize="@dimen/endgame_dialog_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditTextLayout" />

    <TextView
        android:id="@+id/changeUserNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center_horizontal"
        android:paddingHorizontal="8dp"
        android:text="@string/current_nickname"
        android:textAlignment="center"
        android:visibility="gone"
        android:textAllCaps="true"
        android:textColor="@color/bluePrimary"
        android:textSize="@dimen/endgame_dialog_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gameOverTextFull" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/userNameEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:errorEnabled="true"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/changeUserNameText">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/userNameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="20"
            android:textColor="@color/bluePrimary"
            tools:text="@={viewmodel.userName}" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>