<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <data>
        <variable
            name="viewModel"
            type="kon4.sam.guessauto.view_model.GameViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/greyPrimary"
        android:layout_height="match_parent"
        tools:context=".ui.GameFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/ToolbarTheme"
            app:navigationIcon="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:fontFamily="@font/lato_regular"
                android:text="@string/app_name"
                android:textColor="@color/bluePrimary"
                android:textSize="@dimen/toolbar_title"
                android:textStyle="bold" />


        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/scoreText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/in_game_tv_margin_from_border"
            android:layout_marginLeft="@dimen/in_game_tv_margin_from_border"
            android:layout_marginTop="@dimen/score_in_game_margin_top"
            android:fontFamily="@font/lato_medium"
            android:gravity="center_horizontal"
            android:paddingHorizontal="8dp"
            android:text="@string/current_score"
            android:textAlignment="center"
            android:textColor="@color/bluePrimary"
            android:textSize="@dimen/score_in_game"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />


        <TextView
            android:id="@+id/autoCountText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/score_in_game_margin_top"
            android:layout_marginEnd="@dimen/in_game_tv_margin_from_border"
            android:layout_marginRight="@dimen/in_game_tv_margin_from_border"
            android:fontFamily="@font/lato_medium"
            android:text="@string/auto"
            android:textColor="@color/bluePrimary"
            android:textSize="@dimen/score_in_game"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <kon4.sam.guessauto.ui.ZoomableImageView
            android:id="@+id/carImage"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:background="@drawable/turquoise_bg"
            android:scaleType="fitXY"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/scoreText"             />

        <ImageView
            android:id="@+id/timerImage"
            android:layout_width="@dimen/in_game_timer_size"
            android:layout_height="@dimen/in_game_timer_size"
            android:layout_marginTop="@dimen/in_game_timer_margin_top"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:src="@drawable/ic_baseline_timer_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/carImage" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="0dp"
            android:layout_height="@dimen/in_game_progress_bar_height"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:progressDrawable="@drawable/timer_progress"
            app:layout_constraintBottom_toBottomOf="@+id/timerImage"
            app:layout_constraintEnd_toStartOf="@+id/timerImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/timerImage" />

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="@dimen/in_game_answer_button_layout_margin_vertical"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="@dimen/in_game_answer_button_layout_margin_vertical"
            android:weightSum="2"
            app:layout_constraintBottom_toTopOf="@+id/bottomBarLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timerImage">

            <TableRow
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <kon4.sam.guessauto.ui.AnswerButton
                    android:id="@+id/button1"
                    tools:text="Volkswagen Tiguan"
                    style="@style/ButtonStyle" />

                <kon4.sam.guessauto.ui.AnswerButton
                    android:id="@+id/button2"
                    tools:text="Jeep Grand Cherokee"
                    style="@style/ButtonStyle" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2">

                <kon4.sam.guessauto.ui.AnswerButton
                    android:id="@+id/button3"
                    tools:text="Mercedes AMG-GT"
                    style="@style/ButtonStyle" />

                <kon4.sam.guessauto.ui.AnswerButton
                    android:id="@+id/button4"
                    tools:text="Audi R8"
                    style="@style/ButtonStyle"
                    />
            </TableRow>

        </TableLayout>

        <LinearLayout
            android:id="@+id/bottomBarLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="@dimen/in_game_hearts_layout_margin_bottom"
            android:orientation="horizontal"
            android:weightSum="1"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"

                android:layout_gravity="center"
                android:fontFamily="@font/lato_medium"
                android:text="@string/current_attempts"
                android:textColor="@color/bluePrimary"
                android:textSize="@dimen/in_game_attempts_text_size"
                android:layout_marginEnd="8dp" />

            <ImageView
                android:id="@+id/heart1"
                style="@style/HeartImageStyle"
                android:layout_gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/heart2"
                style="@style/HeartImageStyle"
                android:layout_gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

            <ImageView
                android:id="@+id/heart3"
                style="@style/HeartImageStyle"
                android:layout_gravity="center"
                app:layout_constraintBottom_toTopOf="@+id/progressBar"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>